# jeonghoStudy

./: .bash_aliases  .bashrc  kinectTracker2.lua  nuitrackTester.lua
cmakeStudy/: .CMakeLists.txt.un~  CMakeLists.txt  calendar.c
codebackup/: .vimrc  CMakeLists.txt  checkTool.sh  kinectModule2.lua  kinectTracker2.lua  luna_QP.lua  motioncut.lua  nuitrackTester.lua  playground.lua  poseTransferF.lua  posetransfer.lua  realTimeMotionTest.lua  testIK.lua  testMotionFields_simple_etri_old_2019.lua  testVelocityFields_align.lua  two.lua  twochar.lua  twocharacter.lua
cppStudy/: debugTest.cpp  hello  hello.cpp  test  test.cpp
cppStudy/callback_example/: functionPtrExample  functionPtrExample.cpp
cppStudy/currentTest/: timerTest.cpp
cppStudy/firstTest/: debugTest  hello  hello.cpp
dlStudy/: timeseries_cnn.py
dlStudy/TimeseriesCNN/: 1DCNN.py
dlStudy/ValidationTest/: valTest1.py  valTest2.py
dlStudy/test/: valTest3.py
luaStudy/: capsulation.lua
makeStudy/: .CMakeList.txt.un~  .Makefile.un~  .calendar.c.un~  .diary.h.un~  .main.c.un~  .memo.c.un~  CMakeList.txt  Makefile2  diary.h  main.c
memo/: 20200713회의  20200721회의  질문
mocap_jeongho/: calab_0821_jeongho_lefthand.bvh  calab_0821_jeongho_righthand.bvh  calab_0821_jeongho_walk.bvh
pythonStudy/: .namespace.py.un~  .namespace2.py.un~  namespace.py  namespace2.py
